--- a/LambdaExpression/pom.xml
+++ b/LambdaExpression/pom.xml
@@ -25,7 +25,7 @@
 				<artifactId>findbugs-maven-plugin</artifactId>
 				<version>3.0.1</version>
 				<configuration>
-					<effort>Max</effort>
+					<effort>Low</effort>
 					<!-- Reports all bugs (other values are medium and max) -->
 					<threshold>Low</threshold>
 				</configuration>
